--- a/index.html
+++ b/index.html
@@ -11,11 +11,31 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="../projeto-social/home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="../projeto-social/home.html" name="tela" id="tela" frameborder="0">
+                Seu navegador não é compatível com esse conteúdo!
+            </iframe>
 
         </section>
 
         <section id="redes-sociais">
+            <a href="" target="tela"> <!--target="tela" vai direcionar o conteúdo desse link para a tela do celular (iframe)-->
+                <img src="../projeto-social/imagens/logo-home.jpg" alt="Home">  
+            </a><br> <!--para ícones ficarem um emabaixo do outro-->
+            <a href="" target="tela">
+                <img src="../projeto-social/imagens/logo-youtube.jpg" alt="Youtube">
+            </a><br>
+            <a href="" target="tela">
+                <img src="../projeto-social/imagens/logo-github.jpg" alt="GitHub">
+            </a><br>
+            <a href="" target="tela">
+                <img src="../projeto-social/imagens/logo-instagram.jpg" alt="Instagram">
+            </a><br>
+            <a href="" target="tela">
+                <img src="../projeto-social/imagens/logo-twitter.jpg" alt="Twitter">
+            </a><br>
+            <a href="" target="tela">
+                <img src="../projeto-social/imagens/logo-facebook.jpg" alt="Facebook">
+            </a><br>
 
         </section>
     </main>
