--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
         </section>
 
         <section id="redes-sociais">
-            <a href="" target="tela"> <!--target="tela" vai direcionar o conteúdo desse link para a tela do celular (iframe)-->
+            <a href="../projeto-social/home.html" target="tela"> <!--target="tela" vai direcionar o conteúdo desse link para a tela do celular (iframe)-->
                 <img src="../projeto-social/imagens/logo-home.jpg" alt="Home">  
             </a><br> <!--para ícones ficarem um emabaixo do outro-->
-            <a href="" target="tela">
+            <a href="../projeto-social/youtube.html" target="tela">
                 <img src="../projeto-social/imagens/logo-youtube.jpg" alt="Youtube">
             </a><br>
-            <a href="" target="tela">
+            <a href="../projeto-social/github.html" target="tela">
                 <img src="../projeto-social/imagens/logo-github.jpg" alt="GitHub">
             </a><br>
-            <a href="" target="tela">
+            <a href="../projeto-social/instagra.html" target="tela">
                 <img src="../projeto-social/imagens/logo-instagram.jpg" alt="Instagram">
             </a><br>
-            <a href="" target="tela">
+            <a href="../projeto-social/twitter.html" target="tela">
                 <img src="../projeto-social/imagens/logo-twitter.jpg" alt="Twitter">
             </a><br>
-            <a href="" target="tela">
+            <a href="../projeto-social/facebook.html" target="tela">
                 <img src="../projeto-social/imagens/logo-facebook.jpg" alt="Facebook">
             </a><br>
 
